[tool.poetry]
name = "ffgetter"
version = "1.1.0"
description = ""
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
coverage = "^7.4.4"
cryptography = "^39.0.2"
freezegun = "^1.4.0"
isort = "^5.12.0"
jinja2 = "^3.1.3"
mock = "^5.1.0"
plyer = "^2.1.0"
pycodestyle = "^2.11.0"
pyppeteer = "^1.0.2"
python = ">=3.11,<4.0"
requests = "^2.31.0"
requests-html = "^0.10.0"
requests-oauthlib = "^1.3.1"
ruff = "^0.1.15"
twitter-api-client = "^0.10.22"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 256
multi_line_output = 9

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
line-length = 256

[tool.ruff.lint]
ignore = ["F401", "F541", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
