[project]
name = "ff-getter"
version = "0.1.0"
description = "FF getter"
authors = [
    { name = "shift" }
]
dependencies = [
    "coverage>=7.5.3",
    "cryptography>=42.0.8",
    "freezegun>=1.5.1",
    "httpx>=0.27.0",
    "isort>=5.13.2",
    "jinja2>=3.1.4",
    "mock>=5.1.0",
    "plyer>=2.1.0",
    "pycodestyle>=2.11.1",
    "pyppeteer>=2.0.0",
    "requests-html>=0.10.0",
    "requests-oauthlib>=2.0.0",
    "requests>=2.32.3",
    "ruff>=0.4.8",
    "twitter-api-client>=0.10.22",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ff_getter"]
